<resources>
    <string name="app_name">EcoTrade</string>

    <!-- WEB SERVICE -->
    <string name="webservice">http://192.168.0.15:8080/EcoTradeServer/rest/</string>
    <string name="viacep_ws">https://viacep.com.br/ws/</string>

    <!-- MENU -->
    <string name="menu_add_ad">Adicionar Anúncio</string>
    <string name="menu_your_ads">Seus Anúncios</string>
    <string name="menu_login">Acessar Conta</string>
    <string name="menu_signup">Cadastrar-se</string>
    <string name="menu_edit_count">Sua Conta</string>
    <string name="menu_logout">Sair</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_login">Entrar</string>
    <string name="title_activity_detail">Anúncio</string>
    <string name="title_activity_signup">Cadastro</string>
    <string name="title_activity_new_ad">Novo Anúncio</string>
    <string name="title_activity_your_ads">Seus Anúncios</string>

    <!-- MAIN ACTIVITY -->
    <string name="informatica_icon">informática</string>
    <string name="eletronicos_icon">eletrônicos</string>
    <string name="celulares_icon">telefonia</string>
    <string name="categoria_label">Categoria: </string>
    <string name="inserir_anuncio">Inserir Anúncio</string>
    <string name="minha_conta">Minha Conta</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_title">Acessar sua conta</string>
    <string name="login_email">E-mail</string>
    <string name="login_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_sem_conta">Não tem conta?</string>
    <string name="login_cadastrar">Cadastre-se!</string>

    <!-- SIGNUP ACTIVITY -->
    <string name="cadastro_title">Preencha os dados abaixo</string>
    <string name="cadastro_nome">Nome*</string>
    <string name="cadastro_cpf">CPF*</string>
    <string name="cadastro_telefone">Telefone*</string>
    <string name="cadastro_email">E-mail*</string>
    <string name="cadastro_senha">Senha*</string>
    <string name="cadastro_button">Cadastrar</string>

    <!-- NEW AD ACTIVITY -->
    <string name="new_ad_legend">Preencha os dados abaixo</string>
    <string name="new_ad_titulo">Título*</string>
    <string name="new_ad_descricao">Descrição</string>
    <string name="new_ad_finalidade">Finalidade</string>
    <string name="new_ad_finalidade_doar">DOAR</string>
    <string name="new_ad_finalidade_vender">VENDER</string>
    <string name="new_ad_valor">Valor (R$)</string>
    <string name="new_ad_categoria">Categoria*</string>
    <string name="new_ad_cidade">Cidade</string>
    <string name="new_ad_estado">Estado</string>
    <string name="new_ad_endereco">Endereço</string>
    <string name="new_ad_logradouro">Logradouro</string>
    <string name="new_ad_bairro">Bairro</string>
    <string name="new_ad_localizacao">Localização</string>
    <string name="new_ad_cep">CEP*</string>
    <string name="new_ad_numero">Número</string>
    <string name="new_ad_imagens">Imagens</string>

    <!-- AD'S CATEGORIES -->
    <string-array name="categories">
        <item>informática</item>
        <item>eletrônicos</item>
        <item>telefonia</item>
    </string-array>

    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>

    <!-- ICONS DESCRIPTIONS -->
    <string name="more_options">Mais opções</string>
</resources>
