<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/add_anuncio"
        android:title="@string/menu_add_ad"
        android:onClick="goToNewAdActivity"
        app:showAsAction="never"/>

    <item android:id="@+id/your_ads"
        android:title="@string/menu_your_ads"
        android:onClick="goToYourAdsActivity"
        app:showAsAction="never"/>

    <item android:id="@+id/your_count"
        android:title="@string/menu_edit_count"
        android:onClick="goToSignupActivity"
        app:showAsAction="never"/>

    <item android:id="@+id/exit"
        android:title="@string/menu_logout"
        android:onClick="logout"
        app:showAsAction="never"/>
</menu>